# coredb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: daily-tests.yml
conf/: node2.toml  node3.toml
scripts/: start.sh
src/: command.rs  main.rs  resp.rs  server.rs  store.rs
src/config/: config.rs  mod.rs
src/encoding/: bitmap.rs  bloomfilter.rs  hash.rs  hyperloglog.rs  json.rs  list.rs  mod.rs  set.rs  string.rs  zset.rs
src/error/: mod.rs
src/errors/: mod.rs  network_errors.rs  raft_api_errors.rs  runtime_errors.rs
src/protocol/: command.rs  get.rs  mod.rs  resp.rs  set.rs
src/protocol/bitmap/: getbit.rs  mod.rs  setbit.rs
src/protocol/cmd/: set.rs  unknown.rs
src/protocol/connection/: hello.rs  mod.rs  ping.rs
src/protocol/hash/: hdel.rs  hexists.rs  hget.rs  hgetall.rs  hincrby.rs  hkeys.rs  hlen.rs  hmget.rs  hset.rs  hsetnx.rs  hvals.rs  mod.rs
src/protocol/key/: del.rs  exists.rs  expire.rs  keys.rs  mod.rs  persist.rs  pexpire.rs  pttl.rs  rename.rs  renamenx.rs  ttl.rs  type_.rs
src/protocol/list/: lindex.rs  llen.rs  lpop.rs  lpush.rs  lrange.rs  lrem.rs  lset.rs  mod.rs  rpop.rs  rpush.rs
src/protocol/set/: mod.rs  sadd.rs  sismember.rs  smembers.rs  srem.rs
src/protocol/string/: append.rs  decr.rs  decrby.rs  del.rs  get.rs  getset.rs  incr.rs  incrby.rs  (+8 more)
src/raft/: mod.rs  raft_client.rs
src/server/: connection.rs  endpoint.rs  kv_api.rs  mod.rs  raft_forwarder.rs  raft_leader.rs  server.rs  store.rs
src/types/: applied_state.rs  log_entry.rs  message.rs  mod.rs  operation.rs  time.rs  with.rs
src/util/: dns_resolver.rs  mod.rs  time.rs
tests/: base_test.py  cluster_manager.py  run_all_tests.py  start.sh  test_cluster.py  test_cluster_bitmap.py  test_cluster_hash.py  test_cluster_key.py  test_cluster_list.py  test_cluster_set.py  test_cluster_string.py  test_cluster_zset.py
tests/conf/: node1.toml  node2.toml  node3.toml
(+41 files in other folders)
