[package]
name = "CoreDB"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
anyerror = { version = "=0.1.13" }
anyhow = "1"
async-trait = { version = "0.1.88" }
atoi = "2.0.0"
bytes = "1"
byteorder = "1.4.3"
clap = { version = "4.5", features = ["derive"] }
configparser = "3.1.0"
hex = "0.4"
hickory-resolver = "0.25"
futures = "0.3.31"
openraft = { git="https://github.com/databendlabs/openraft.git", rev = "675fda0", features = ["type-alias"] }
prost = "0.13"
rand = "0.9"
rocksdb = "0.24.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12.3"

[build-dependencies]
prost-build = { version = "0.13" }
tonic-build = { version = "0.12.3" }

[[bin]]
name = "coredb"
path = "src/main.rs"